Added under the hood section to blog post

--- a/_posts/2015-10-23-pinet-1.1.0.md
+++ b/_posts/2015-10-23-pinet-1.1.0.md
@@ -19,6 +19,8 @@ The biggest changes in this release are
 - Added SD card image generator as an alternative to copying files to the SD card - [(1.0.18)](https://github.com/PiNet/PiNet/commit/f1aa7198a68228a5c352fb3736a884bbdb76b5a6)   
 - Added Pygame Zero and gpiozero to be defaultly installed - [(1.0.18)](https://github.com/PiNet/PiNet/commit/f1aa7198a68228a5c352fb3736a884bbdb76b5a6)    
 - Added new [PiNet metrics system](/articles/advanced/metrics.html) -  [(1.0.18)](https://github.com/PiNet/PiNet/commit/f1aa7198a68228a5c352fb3736a884bbdb76b5a6)
+   
+Under the hood, there is also new stuff including updated kernels (now using the 4.1.x branch instead of 3.18.x), a new boot files repository and a new internet connection checker.
 
 ## The new logo    
 Back in June I was on the hunt for a new logo for PiNet. The old one used the Raspberry Pi Foundation logo which meant it wasn't suitable for use in many places.    
